# thiagolopes.github.io

./: 404.html  CNAME  README.md  README.org  config.rb  gulpfile.js  index.html  new_index.html  package.json  publish.sh  texts.txt
css/: master.css  sakura.css  site.css
css/sakura/css/: crt.css
css/sakura/scss/: .sakura.scss.~undo-tree~  _main.scss  sakura.scss
sakura/: package-lock.json
sakura/css/: sakura.css
sass/: master.scss
sass/partials/: _about.scss  _formacao.scss  _geral.scss  _habilidades.scss  _header.scss  _linux.scss
sass/variables/: _variables.scss
src/: index.md  package.json
src/css/: main.css
src/js/: main.js
src/sass/: master.scss
src/sass/base/: _base.scss  _classes.scss
src/sass/bootstrap/: _variables.scss
src/sass/variables/: _variables.scss
template-generator/: pyproject.toml
