[tool.poetry]
name = "template-generator"
version = "0.1.0"
description = ""
authors = ["thiagolopes <thiagolopes@protonmail.com>"]
readme = "README.md"
packages = [{include = "template_generator"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
